Added and used configuration of "session should start within the next N (#1974)
minutes" in ShowScheduleStep.